// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-open-with/BoxToolsInstallMessage render should render a translated message with a link 1`] = `
<FormattedMessage
  defaultMessage="Install {boxTools} to open this file on your desktop"
  id="be.boxToolsInstallMessage"
  values={
    Object {
      "boxTools": <a
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
      >
        Box Tools
      </a>,
    }
  }
/>
`;

exports[`elements/content-open-with/BoxToolsInstallMessage render should use passed in name and URL if provided 1`] = `
<FormattedMessage
  defaultMessage="Install {boxTools} to open this file on your desktop"
  id="be.boxToolsInstallMessage"
  values={
    Object {
      "boxTools": <a
        href="#"
        onClick={[Function]}
        rel="noopener noreferrer"
      >
        a local application
      </a>,
    }
  }
/>
`;
